--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.11.1",
+    "remixicon": "^4.2.0",
     "sass": "^1.72.0",
     "tw-elements": "^2.0.0",
     "vue": "^3.4.21",
