--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "nuxt": "^3.11.1",
     "remixicon": "^4.2.0",
     "sass": "^1.72.0",
